--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.20.0"
+    "sequelize": "^6.20.0",
+    "socket.io": "^4.5.1"
   }
 }
