--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "lint": "npx eslint **/*.js"
+    "lint": "npx eslint **/*.js",
+    "lintFix": "npx eslint --fix **/*.js"
   },
   "repository": {
     "type": "git",
@@ -39,4 +40,5 @@
     "sequelize": "^6.20.0",
     "socket.io": "^4.5.1"
   }
+  
 }
